# Onvif-ubuntu

./: README.md  buildAll.sh  helperFunc.sh
OnvifSDK/: CMakeLists.txt  Makefile  README  cmake_install.cmake  defs.h.in  stlvector.h  web.h
OnvifSDK/Eventing/: EventingClient.cpp  EventingClient.h  EventingServiceImpl.cpp  EventingServiceImpl.h  EventingTypes.cpp  NotificationConsumer.cpp  NotificationConsumer.h  NotificationProducer.cpp  NotificationProducer.h
OnvifSDK/WsDiscovery/: discoverable.cpp  discoverable.h  discoverer.cpp  discoverer.h  onvifxx.cpp  onvifxx.hpp  remotediscovery.hpp  remotediscovery_proxy.cpp  remotediscovery_service.cpp  wsa.cpp  wsa.hpp
OnvifSDK/cmake/: FindGSOAP.cmake
OnvifSDK/include/: AnalyticsServiceImpl.h  BaseClient.h  BaseServer.h  DeviceClient.h  DeviceIOClient.h  DeviceIOServiceImpl.h  DeviceInfoStorage.h  DeviceServiceImpl.h  DisplayClient.h  DisplayServiceImpl.h  MediaServiceImpl.h  MediaTypes.h  OnvifSDK.h  ReceiverClient.h  ReceiverServiceImpl.h  RecordingClient.h  RecordingServiceImpl.h  ReplayServiceImpl.h  SearchServiceImpl.h  onvifService.h
OnvifSDK/source/: AnalyticsServiceImpl.cpp  AnalyticsTypes.cpp  BaseClient.cpp  BaseServer.cpp  DeviceClient.cpp  DeviceIOClient.cpp  DeviceIOServiceImpl.cpp  DeviceIOTypes.cpp  DeviceInfoStorage.cpp  DeviceServiceImpl.cpp  DeviceTypes.cpp  DisplayClient.cpp  DisplayServiceImpl.cpp  DisplayTypes.cpp  MediaServiceImpl.cpp  MediaTypes.cpp  ReceiverClient.cpp  ReceiverServiceImpl.cpp  ReceiverTypes.cpp  RecordingClient.cpp  RecordingServiceImpl.cpp  RecordingTypes.cpp  ReplayServiceImpl.cpp  ReplayTypes.cpp  SearchServiceImpl.cpp  SearchTypes.cpp
OnvifSDK/src/: Web.nsmap  WebDeviceBindingProxy.cpp  WebDeviceBindingProxy.h  WebDeviceBindingService.cpp  WebDeviceBindingService.h  WebDeviceIOBindingProxy.cpp  WebDeviceIOBindingProxy.h  WebDeviceIOBindingService.cpp  WebDeviceIOBindingService.h  WebDisplayBindingProxy.cpp  WebDisplayBindingProxy.h  WebDisplayBindingService.cpp  WebDisplayBindingService.h  WebMediaBindingProxy.cpp  WebMediaBindingProxy.h  WebMediaBindingService.cpp  WebMediaBindingService.h  WebPullPointSubscriptionBindingProxy.cpp  WebPullPointSubscriptionBindingService.cpp  WebPullPointSubscriptionBindingService.h  WebReceiverBindingProxy.cpp  WebReceiverBindingProxy.h  WebReceiverBindingService.cpp  WebReceiverBindingService.h  WebRecordingBindingProxy.cpp  WebRecordingBindingProxy.h  WebRecordingBindingService.cpp  WebRecordingBindingService.h  WebRemoteDiscoveryBindingProxy.cpp  WebRemoteDiscoveryBindingService.cpp  WebRemoteDiscoveryBindingService.h  WebReplayBindingProxy.cpp  WebReplayBindingProxy.h  WebReplayBindingService.cpp  WebReplayBindingService.h  WebRuleEngineBindingProxy.cpp  WebRuleEngineBindingService.cpp  WebRuleEngineBindingService.h  WebSearchBindingProxy.cpp  WebSearchBindingProxy.h  (+3 more)
OnvifSDK/xml/: Makefile  addressing.xsd  bf-2.xsd  cmake_install.cmake  onvif.xsd  patch.xslt  receiver.wsdl  remotediscovery.wsdl  replay.wsdl  ws-discovery.xsd
common/: helpers.cpp  helpers.h  sigrlog.h
examples/OnvifClient/: CMakeLists.txt  README  mainClient.cpp
examples/OnvifServer/: CMakeLists.txt  EventsEmitter.cpp  EventsEmitter.h  OnvifTestServer.cpp  OnvifTestServer.h  README  mainServ.cpp
